--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Here is title</h1>
+    <h1>Here is title1</h1>
     <p>Here is content 2</p>
     <p>Here is content 2</p>
     <p>Here is content 2</p>
