--- a/about.html
+++ b/about.html
@@ -7,9 +7,7 @@
     <title>About</title>
 </head>
 <body>
-    <h1>Here is title</h1>
-    <p>Here is content 2</p>
-    <p>Here is content 2</p>
-    <p>Here is content 2</p>
+    <h1>Here is about</h1>
+
 </body>
 </html>
